--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,5 @@ kotlin.code.style=official
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+# Don't generate build config file
+android.defaults.buildfeatures.buildconfig=false
