--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -3,21 +3,17 @@ apply plugin: "kotlin-android"
 apply plugin: "kotlin-kapt"
 
 android {
-    compileSdkVersion rootProject.compileSdkVersion
+    compileSdkVersion versions.compileSdk
 
     defaultConfig {
         applicationId "com.thunderdogge.sample"
-        minSdkVersion rootProject.minSdkVersion
-        targetSdkVersion rootProject.targetSdkVersion
+        minSdkVersion versions.minSdk
+        targetSdkVersion versions.targetSdk
         versionCode 1
         versionName "1.0.0"
     }
 
     buildTypes {
-        debug {
-            multiDexEnabled true
-        }
-
         release {
             minifyEnabled true
             shrinkResources true
@@ -30,19 +26,16 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility 1.8
-        targetCompatibility 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
     implementation project(":library")
 
-    implementation rootProject.kotlinRuntime
-
-    implementation rootProject.androidMaterial
-    implementation rootProject.androidConstraintLayout
-    implementation rootProject.androidLifecycleExtensions
+    implementation libraries.kotlinRuntime
+    implementation libraries.androidMaterial
 
     implementation "com.github.stephanenicolas.toothpick:toothpick-runtime:3.1.0"
     kapt "com.github.stephanenicolas.toothpick:toothpick-compiler:3.1.0"
