--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ subprojects {
     repositories {
         google()
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
 
